Prevent double clicking pass/challenge buttons from zooming on mobile.

--- a/liwords-ui/src/gameroom/scss/gameroom.scss
+++ b/liwords-ui/src/gameroom/scss/gameroom.scss
@@ -732,7 +732,7 @@ $tile-transition: width ease-in 100ms, height ease-in 100ms, background-color ea
   button.ant-btn {
     margin: 0 12px;
     font-size: 16px;
-
+    touch-action: manipulation;
     &.ant-btn-circle {
       border-radius: 50%;
       width: $tile-size-laptop;
